# RSE_SWE_SS26

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig
c_list/: CMakeLists.txt  list.c  list.h  main.c
cpp_double_list/: CMakeLists.txt
cpp_double_list/src/: cpp_double_list.cpp  main.cpp
cpp_double_list/test/: test_cpp_double_list.cpp
cpp_list/: CMakeLists.txt  CMakeLists.txt.orig  list.cpp  list.hpp  main.cpp
cpp_list/include/: ListIterator.hpp  ListNode.hpp  ListReverse_Iterator.hpp  list.hpp
cpp_list/src/: ListIterator.cpp  ListReverse_Iterator.cpp  list.cpp  list.cpp.orig  main.cpp
cpp_list/test/: list.cpp  list.cpp.orig
cpp_list_homework/: CMakeLists.txt  list  list.cpp  main  main.cpp
cpp_list_homework/include/: list.hpp
cpp_list_homework/src/: list.cpp  main.cpp
cpp_list_homework/test/: list.cpp
double_linked_cpplist/: CMakeLists.txt
double_linked_cpplist/include/: d_list.hpp
double_linked_cpplist/src/: d_list.cpp  main.cpp
double_linked_cpplist/test/: d_list.cpp
hello_world/: hello_world.c
hw/hw3_cpp_list_unit_tests/: Doxyfile
hw/hw3_cpp_list_unit_tests/docs/html/: annotated.html  classList-members.html  classList.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  list_8hpp_source.html
hw/hw3_cpp_list_unit_tests/docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  functions_0.js  functions_1.js  searchdata.js
hw/hw3_cpp_list_unit_tests/include/: list.hpp
hw/hw3_cpp_list_unit_tests/src/: list.cpp  main.cpp
hw/hw3_cpp_list_unit_tests/test/: list.cpp
pybind/: CMakeLists.txt  adder.cpp  test.py
pyblind/: CMakeLists.txt  adder.cpp  test.py
singelton/: CMakeLists.txt
singelton/include/: singelton.hpp
singelton/src/: main.cpp  singelton.cpp
singleton/: CMakeLists.txt
singleton/include/: singleton.hpp
singleton/src/: main.cpp  singleton.cpp
sudoku/: CMakeLists.txt  CMakelists.txt  srcoutput.txt
sudoku/include/: creator.hpp  generator.hpp  solver.hpp  sudoku.hpp  sudoku.hpp.orig  sudokuGenerator.hpp  sudoku_generator.hpp
sudoku/includes/: sudoku.hpp
sudoku/python/: python_wrapper.cpp  random_generated.txt  sudoku.py
sudoku/python/results/: 0.txt  1.txt  2.txt  3.txt  4.txt  output.txt
sudoku/python/venvSUDOKU/: pyvenv.cfg
sudoku/solutions/: solution_0.txt  solution_1.txt
sudoku/src/: creator.cpp  generator.cpp  input.txt  input_random.txt  main.cpp  main.cpp.orig  random_generated.txt  solver.cpp  sudokuGenerator.cpp  sudoku_wrapper.cpp  template.txt
sudoku/src/new_Sudokus/: hello.txt
sudoku/src/results/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+23 more)
sudoku/test/: generator.cpp  sudoku.cpp  sudoku.cpp.orig
